# Project-Explainer

./: README.md  build.sh  pyproject.toml
project_explainer/gh_explainer/: summarize.py
project_explainer_ui/: ui.py
project_processor/gh_processor/: github_downloader.py
